samples/_failures_safe/1761072708_685f9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a71f69b8.c: In function ‘main’:
./samples/SAFE/__tmp_a71f69b8.c:139:5: error: expected declaration or statement at end of input
  139 |     if (!read_matrix_from_input(&mat1)) {
      |     ^~
./samples/SAFE/__tmp_a71f69b8.c:139:5: error: expected declaration or statement at end of input
